--- a/form-runner/jvm/src/main/assets/xbl/orbeon/date/date.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/date/date.less
@@ -1,10 +1,9 @@
 .xbl-fr-date {
-    // Override value set by bootstrap-datepicker which causes the icon to be misaligned
-    .input-append.date .add-on {
-        // Make things look good with calendar icon
-        padding: 3px 6px 5px 4px;
-        i {
-            margin-top: 0;
+    .input-append.date {
+        .add-on {
+            // Make things look good with calendar icon
+            padding: 3px 6px 5px 4px;
+            i { margin-top: 0 }
         }
     }
 
