--- a/form-runner/jvm/src/main/assets/xbl/orbeon/time/time.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/time/time.less
@@ -1,9 +1,7 @@
 .xbl-fr-time {
     .orbeon & .xforms-input {
-        width: 100%;
         input.xforms-type-time {
             background-image: none;
-            width: 100%;
         }
     }
 
